assets/css/style.css
body {
    background-image: url("../images/blue-crystal-background.jpg");
}

#CrystalsHeader {
    text-align: center;
    height: 100%;
}

#CrystalsHeader, #totalScore, #wins, #losses {
    font-family: 'Permanent Marker', cursive;}

p {
    font-family: 'Play', sans-serif;
}

.crystalImg {
    height: auto;
    width: 40px;
}

#CrystalsHeaderContainer {
    background-color: aqua;
    border: 5px solid fuchsia;
}

#goalPoints {
    text-align: center;
    font-size: 50px;
    padding-top: 35px;
    padding-left: 0;
}

#text-container {
    background-color: wheat;
    padding-left: 10px;
}

#currentPoints {
    height: 90%;
    text-align: center;
    font-size: 50px;
    padding-top: 20px;
    border: 5px dashed fuchsia;
}

#totalScore {
    margin-bottom: -20px;
    padding-left: 15px;
}

#totalScore, #currentPoints {
    background-color: aqua;
    text-align: center;
}

#scoreboard {
    text-align: center;
    font-size: 20px;
    padding: 40px 0;
}

#goal-points-container,
#scoreboard-container {
    background-color: fuchsia;
    width: 100%;
    border: 10px solid aqua;
    
}

.btn-container {
    text-align: center;
}

